--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 16 Apr 2024 06:26:18 AM EDT
+#Wed Apr 24 05:24:14 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-all.zip
