--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue 23 Apr 2024 07:38:22 AM EDT
+#Thu May  9 04:36:55 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip
