--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu May  9 04:44:15 EDT 2024
+#Mon 27 May 2024 05:54:33 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip
 distributionPath=wrapper/dists
