--- a/AppShortcuts/app/build.gradle
+++ b/AppShortcuts/app/build.gradle
@@ -1,37 +1,37 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
+    compileSdk (34)
 
     defaultConfig {
-        applicationId "com.example.android.appshortcuts"
-        minSdkVersion 25
-        targetSdkVersion 34
+        applicationId ("com.example.android.appshortcuts")
+        minSdkVersion (25)
+        targetSdkVersion (34)
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled (false)
+            proguardFiles (getDefaultProguardFile("proguard-android.txt"), "proguard-rules.txt")
         }
     }
-    namespace 'com.example.android.appshortcuts'
+    namespace = "com.example.android.appshortcuts"
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation "androidx.core:core-ktx:1.13.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+    implementation ("androidx.appcompat:appcompat:1.7.0")
+    implementation ("androidx.core:core-ktx:1.13.1")
+    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1")
+    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1")
 }
 repositories {
     google()
