--- a/DragAndDropAcrossApps/DropTarget/build.gradle
+++ b/DragAndDropAcrossApps/DropTarget/build.gradle
@@ -14,39 +14,39 @@
  * limitations under the License.
  */
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
-    compileSdk 34
+    compileSdk = 34
 
     defaultConfig {
-        applicationId "com.example.android.droptarget"
-        minSdkVersion 24
-        targetSdkVersion 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.example.android.droptarget"
+        minSdkVersion (24)
+        targetSdkVersion (34)
+        versionCode (1)
+        versionName ("1.0")
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled (false)
+            proguardFiles(getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro")
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.example.android.droptarget'
+    namespace = "com.example.android.droptarget"
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation "androidx.core:core-ktx:1.13.1"
+    implementation ("androidx.appcompat:appcompat:1.7.0")
+    implementation ("androidx.legacy:legacy-support-v13:1.0.0")
+    implementation ("androidx.core:core-ktx:1.13.1")
 }
 repositories {
     google()
