--- a/ImmersiveMode/app/build.gradle
+++ b/ImmersiveMode/app/build.gradle
@@ -15,31 +15,31 @@
  */
 
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    id("com.android.application")
+    id("kotlin-android")
 }
 
 android {
-    compileSdk 34
+    compileSdk = 34
     defaultConfig {
-        applicationId 'com.example.android.immersivemode'
-        minSdkVersion 19
-        targetSdkVersion 34
-        versionCode 1
-        versionName '1.0'
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        applicationId = "com.example.android.immersivemode"
+        minSdkVersion (21)
+        targetSdkVersion (34)
+        versionCode = 1
+        versionName = "1.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
-    namespace 'com.example.android.immersivemode'
+    namespace = "com.example.android.immersivemode"
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation ("androidx.core:core-ktx:1.13.1")
+    implementation ("androidx.appcompat:appcompat:1.7.0")
 }
