--- a/ImmersiveMode/build.gradle
+++ b/ImmersiveMode/build.gradle
@@ -16,15 +16,15 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.9.24'
+        kotlin_version = "1.9.24"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath ("com.android.tools.build:gradle:8.4.1")
+        classpath ("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
 
@@ -35,6 +35,6 @@ allprojects {
     }
 }
 
-tasks.register('clean', Delete) {
-    delete rootProject.layout.buildDir
+tasks.register("clean", Delete) {
+    delete(rootProject.layout.buildDir)
 }
